syntax = "proto3";

option java_package = "ru.clevertec.newsservice.dto.proto";
option java_multiple_files = true;

message TokenValidationResponse {
  string role = 1;
  string email = 2;
}

message DeleteResponse {
  string message = 1;
}
